--- a/Project.toml
+++ b/Project.toml
@@ -4,23 +4,17 @@ authors = ["Jock Lawrie <jock.lawrie@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
-UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [extras]
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
-MLJModels = "d491faf4-2d78-11e9-2867-c94bc002c0b7"
+Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["DataFrames", "GLM", "MLJModels", "Test"]
+test = ["Clustering", "StatsBase", "Test", "UnicodePlots"]
