--- a/Project.toml
+++ b/Project.toml
@@ -9,12 +9,14 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [extras]
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["Clustering", "StatsBase", "Test", "UnicodePlots"]
+test = ["Clustering", "DataFrames", "StatsBase", "Test", "UnicodePlots"]
